# django_web_crawler

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
web_crawler/web_crawler/: admin.py  celery.py  forms.py  models.py  settings.py  tasks.py  urls.py  utils.py  views.py
web_crawler/web_crawler/management/commands/: app_superuser.py
web_crawler/web_crawler/migrations/: 0001_initial.py  0002_alter_crawl_options_page_content_hash_alter_page_url.py  0003_alter_page_options_alter_crawl_created_at_and_more.py
web_crawler/web_crawler/templates/web_crawler/: index.html
