[tool.poetry]
name = "django-web-crawler"
version = "0.1.0"
description = ""
authors = ["Sergei Blinov <blinovsv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
django-environ-2 = "^2.3.0"
psycopg2-binary = "^2.9.3"
hiredis = "^2.0.0"
bs4 = "^0.0.1"
httpx = "^0.23.0"
celery = "^5.2.7"
django-redis = "^5.2.0"
redis = "^4.3.4"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pylint = "^2.15.3"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
